src/test/deca/codegen/valid/convFloat.deca
{
    float x = 2.5 + 2;
    float y = 2 + 2.5;
    println(x);
    println(y);
}