src/test/deca/codegen/invalid/divpar0.deca
// Division par 0

// Date: 19.01.2022

{
int a = 5;
float b = 0.;
println (a/b);
println (a/0);
}